--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,17 @@
-services:
-  open-run-archive-dev:
-    image: ghcr.io/open-run-org/archive-dev
-    container_name: open-run-archive-dev
-    working_dir: /workspace
-    volumes:
-      - "..:/workspace"
-    command: >
-      bash -lc "
-        exec sleep infinity
-      "
+{
+  "dockerComposeFile": "docker-compose.yaml",
+  "service": "open-run-teidaishu-dev",
+  "workspaceFolder": "/workspace",
+  "shutdownAction": "stopCompose",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "golang.go",
+        "ms-python.python",
+        "julialang.language-julia",
+        "yzhang.markdown-all-in-one",
+        "tamasfe.even-better-toml"
+      ]
+    }
+  }
+}
