--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
         "ms-python.python",
         "julialang.language-julia",
         "yzhang.markdown-all-in-one",
-        "tamasfe.even-better-toml"
+        "tamasfe.even-better-toml",
+        "redhat.vscode-yaml"
       ]
     }
   }
