--- a/config/pipeline/reddit/02_staged.yaml
+++ b/config/pipeline/reddit/02_staged.yaml
@@ -1,9 +1,7 @@
-raw_root: data/reddit/00_raw
 parquet_root: data/reddit/01_parquet
+staged_root: data/reddit/02_staged
 
-lookback_days: 14
-
-compression: zstd
+lookback_days: 4
 
 subreddits:
   - BakaNewsJP
