--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,12 @@ anyio==4.12.0
     # via
     #   google-genai
     #   httpx
+boto3==1.42.10
+    # via -r requirements.in
+botocore==1.42.11
+    # via
+    #   boto3
+    #   s3transfer
 cachetools==6.2.4
     # via google-auth
 certifi==2025.11.12
@@ -32,6 +38,10 @@ idna==3.11
     #   anyio
     #   httpx
     #   requests
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
 pyasn1==0.6.1
     # via
     #   pyasn1-modules
@@ -42,12 +52,18 @@ pydantic==2.12.5
     # via google-genai
 pydantic-core==2.41.5
     # via pydantic
+python-dateutil==2.9.0.post0
+    # via botocore
 requests==2.32.4
     # via
     #   -r requirements.in
     #   google-genai
 rsa==4.9.1
     # via google-auth
+s3transfer==0.16.0
+    # via boto3
+six==1.17.0
+    # via python-dateutil
 tenacity==9.1.2
     # via google-genai
 typing-extensions==4.15.0
@@ -59,6 +75,8 @@ typing-extensions==4.15.0
 typing-inspection==0.4.2
     # via pydantic
 urllib3==2.6.2
-    # via requests
+    # via
+    #   botocore
+    #   requests
 websockets==15.0.1
     # via google-genai
